renew swagger UI
