# api/routes/user-routes.js
@@ -4,13 +4,13 @@ const userCore = require('../../core/user-core');
 const userModel = require('../../models/user');
 const db = require('../../models');
 
-router.post('/register',
-    userValidator.validate('createUser'),
-    function(req, res){
-        let user = userModel(db.sequelize, db.Sequelize.DataTypes);
-        userCore.create(req, res, user);
-    }
-)
+// router.post('/register',
+//     userValidator.validate('createUser'),
+//     function(req, res){
+//         let user = userModel(db.sequelize, db.Sequelize.DataTypes);
+//         userCore.create(req, res, user);
+//     }
+// )
 
 router.get('/',
     userValidator.validate('getAllUser'),
